# intel_tbb

./: CMakeLists.txt  Forex.cpp  Forex.h  Forex_reader.cpp  Forex_reader.h  LICENSE  Parallel_moving_average_calculator.cpp  Parallel_moving_average_calculator.h  Serial_moving_average_calculator.cpp  Serial_moving_average_calculator.h  Stopwatch.h  parallel_calc.cpp  serial_calc.cpp  standalone_functions.cpp  standalone_functions.h
